# FAST-IBAN_Project

./: README.md  config_executor.py  configurator_CLI.py  exec_all.sh  requirements.txt
code/: CMakeLists.txt  FAST-IBAN_main.c  FAST-IBAN_main_new.c  FAST-IBAN_main_old.c  function_saver.txt  functs.c  functs.h  geopot.c  geopot_copy  geopot_copy.c  geopot_v1.c  geopot_v2.c  read4d.c
code/data/: geopot_500hPa_2022-03-14_00-06-12-18UTC_HN.nc
code/libraries/: calc.h  calc_v2.h  init.h  lib.h  lib_v2.h  utils.h  utils_v2.h
code/pruebas/: generate4d.c  prueba.c  read4d.c
code/src/: calc.c  calc_v2.c  init.c  lib.c  lib_v2.c  utils.c  utils_v2.c
code/test/: distances.c
code/tests/: CMakeLists.txt  test_bearing_points.c  test_contours.c  test_coordpoint.c  test_great_circle.c  test_point_distance.c
execution/code/: CMakeLists.txt  FAST-IBAN_main.c  FAST-IBAN_main_mpi.c  FAST-IBAN_main_omp.c  FAST-IBAN_main_omp_mpi.c
execution/code/libraries/: calc.h  init.h  lib.h  utils.h
execution/code/src/: calc.c  init.c  lib.c  utils.c
execution/code/tests/: CMakeLists.txt  test_bilinear_int.c  test_coordpoint.c  test_great_circle.c  test_line_between_points.c
python_visualizer/: clean_out.sh  config.ini  config.yaml  generate_combined_map.py  generate_combined_map_circle.py  generate_contour_map.py  generate_map.py  generate_map_test.py  generate_scatter_map.py  map_selector.py  pruebas.py  pruebas2.py
python_visualizer/data/: Geopotential_candidates.csv  Geopotential_groups_max.csv  Geopotential_max.csv  Geopotential_min.csv  Geopotential_selected.csv  Geopotential_selected_comb.csv  Geopotential_selected_max.csv  Geopotential_selected_min.csv  move_files.sh
python_visualizer/generate_maps/: generate_maps.py
python_visualizer/generate_maps/old_scripts/: generate_combined_map_circle.py  generate_scatter_map_selected.py
python_visualizer/utils/: compare_csv.py  config_file.py  config_file_CLI.py  config_file_CLI_old.py  file_combiner.py  map_utils.py
tracking/: event_tracking.py
utils/: enums.py  file_combiner.py  gif_generator.py  map_utils.py
visualization/: map_selector.py
visualization/generate_maps/: generate_maps.py
